# project-loop-harness

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TASKS.md  pcl.yaml  pyproject.toml
agent-tasks/: 0001-hardening-cli.md  0002-db-migrations.md  0003-workflow-runner.md  0004-dashboard-renderer.md  0005-agent-integration.md  0006-codex-plugin.md  0007-mcp-server.md  0008-loop-lifecycle.md  0009-defect-lifecycle.md  0010-reporting-evidence.md  0011-validation-invariants.md  0012-audit-log-integrity.md  0013-validation-diagnostics.md  0014-escalation-lifecycle.md  0015-decision-lifecycle.md  0016-escalation-decision-linkage.md  0017-next-action-guided-loop.md  0018-readme-golden-path.md  0019-recovery-playbook.md  0020-example-project-refresh.md  0021-agent-adapter-contract.md  0022-agent-output-validation.md  0023-codex-exec-adapter-hardening.md  0024-claude-manual-adapter-hardening.md  0025-generic-shell-adapter.md  0026-agent-job-evidence-ingestion.md  0027-dashboard-data-contract.md  0028-dashboard-evidence-navigation.md  0029-dashboard-risk-and-blockers.md  0030-distribution-readiness.md  0031-workflow-proposal-mode.md  0032-workflow-proposal-review.md  0033-workflow-verifier.md  0034-limited-execution-sandbox.md  0035-automatic-workflow-executor.md  0036-executor-dogfood-workflow.md  0037-executor-retry-resume.md  0038-story-test-lifecycle.md  0039-workflow-yaml-rule-expressions.md  0040-test-case-evidence-validation.md  (+177 more)
docs/: adaptive-policy-v1.md  adoption-guide.md  adoption-proof-v0.5.2-participant-kit.md  adoption-proof-v0.5.2.md  agent-adapter-contract.md  agent-output-template.md  agent-roles.md  approval-provenance-v1.md  architecture.md  canonical-state-baseline-v0.4.2.md  code-context.md  command-guide.md  completion-packet-v1.md  completion-policy-v1.md  context-check.md  context-pack.md  council-profile.md  crash-concurrency-reliability.md  data-model.md  (+49 more)
(+671 files in other folders)
